welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: ';' expected but 'for' found.
  }for(i<-0 to getWorldHeight){
   ^